# PITZ-2

./: .gitignore  CMakeLists.txt  Makefile  README.md  dziennik-prac.md  koncowe-podsumowanie.md
include/: builder.hpp  graph_struct.hpp  raptor_basic.hpp
public/: app.js  index.html
src/: builder.cpp  main.cpp  raptor_basic.cpp
web/: app.js  index.html  style.css
